# bbcat-thumbnailer

./: Cargo.toml  Makefile  README.md
.github/workflows/: tip-packages.yml
data/: bbcat-thumbnailer.thumbnailer.in  bbcat-thumbnailer.xml
scripts/: build-deb
src/: main.rs
